--- a/index.html
+++ b/index.html
@@ -1,29 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>ZaaZ CRM</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-  html, body {
-    margin:0;
-    padding:0;
-    height:100%;
-    overflow:hidden;
-    background:#f5f6fa;
-  }
-  iframe {
-    width:100vw;
-    height:100vh;
-    border:none;
-  }
-</style>
+  <title>CRM Zaaz</title>
 </head>
 <body>
-
-<!-- 🔥 Reemplaza esta URL con tu /exec REAL -->
-https://script.google.com/macros/s/AKfycbxa-v6VBa1Bay24KPft08B9jbvTSrx_DsNYWVvIuhve3Rr_gmVVcTEs6wdfc2eG1qHI/exec
-</iframe>
-
+  <h1>Bienvenido a CRM Zaaz</h1>
 </body>
 </html>
