--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>CRM Zaaz</title>
-</head>
-<body>
-  <h1>Bienvenido a CRM Zaaz</h1>
-</body>
-</html>
+<h1> Hola Mundo </h1> 
