--- a/index.html
+++ b/index.html
@@ -2,67 +2,148 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CRM Zaaz</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { font-family: system-ui, sans-serif; margin: 2rem; }
-    pre { background: #f6f8fa; padding: 1rem; border-radius: 8px; }
-    button { padding: .6rem 1rem; }
+    :root {
+      color-scheme: light dark;
+      --bg: #0b0f14;
+      --fg: #e6edf3;
+      --muted: #9aa4b2;
+      --accent: #3b82f6;
+      --card: #111827;
+    }
+    * { box-sizing: border-box; }
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--fg);
+    }
+    header {
+      display: flex; align-items: center; justify-content: space-between;
+      padding: .75rem 1rem; background: rgba(0,0,0,.35); backdrop-filter: blur(6px);
+      position: sticky; top: 0; z-index: 5; border-bottom: 1px solid #1f2937;
+    }
+    header .title { font-weight: 600; }
+    header .actions { display: flex; gap: .5rem; }
+    button, .btn {
+      appearance: none; border: 1px solid #334155; background: #1f2937; color: var(--fg);
+      padding: .5rem .8rem; border-radius: .5rem; cursor: pointer; text-decoration: none;
+    }
+    button:hover, .btn:hover { border-color: var(--accent); color: white; }
+    .container {
+      height: calc(100% - 56px); /* resta el header */
+    }
+    iframe {
+      width: 100%; height: 100%; border: 0; background: #0b0f14;
+    }
+    .fallback {
+      display: none; /* se muestra solo si el iframe falla */
+      height: 100%; padding: 2rem; display: grid; place-items: center;
+      text-align: center; background: var(--card);
+    }
+    .card {
+      max-width: 680px; width: 100%; padding: 1.25rem; border: 1px solid #253046; border-radius: 12px;
+      background: #0e1624;
+    }
+    .muted { color: var(--muted); }
+    pre { background: #0c1220; padding: .75rem; border-radius: .5rem; overflow: auto; }
   </style>
 </head>
 <body>
-  <h1>Bienvenido a CRM Zaaz</h1>
+  <header>
+    <div class="title">CRM Zaaz</div>
+    <div class="actions">
+      <!-- Abre en pestaña nueva si lo prefieres -->
+      <a class="btn" id="openNew" target="_blank" rel="noopener">Abrir en pestaña</a>
+      <button id="reload">Recargar</button>
+    </div>
+  </header>
 
-  <section>
-    <h2>GET al Web App (leer)</h2>
-    <button id="btnGet">Probar GET</button>
-    <pre id="outGet">—</pre>
-  </section>
+  <div class="container">
+    <!-- IFRAME con tu Web App de Apps Script -->
+    <iframe id="appFrame"
+      src="https://script.google.com/macros/s/AKfycbxa-v6VBa1Bay24KPft08B9jbvTSrx_DsNYWVvIuhve3Rr_gmVVcTEs6wdfc2eG1qHI/exec"
+      referrerpolicy="no-referrer"
+      allow="clipboard-read; clipboard-write">
+    </iframe>
 
-  <section>
-    <h2>POST al Web App (escribir)</h2>
-    <button id="btnPost">Probar POST</button>
-    <pre id="outPost">—</pre>
-  </section>
+    <!-- Fallback si el iframe es bloqueado (X-Frame-Options / CORS) -->
+    <div id="fallback" class="fallback" aria-live="polite" hidden>
+      <div class="card">
+        <h2>No se pudo mostrar el App Script dentro de la página</h2>
+        <p class="muted">
+          Algunos navegadores o políticas de seguridad pueden bloquear la carga en iframe.
+          Puedes abrirlo directamente en una pestaña nueva.
+        </p>
+        <p>
+          <a class="btn" id="fallbackLink" target="_blank" rel="noopener">
+            Abrir CRM (Apps Script)
+          </a>
+        </p>
+
+        <details>
+          <summary class="muted">Ver alternativas / uso como API</summary>
+          <div style="text-align:left; margin-top: .75rem;">
+            <p class="muted">Si prefieres usar Apps Script como backend (JSON), aquí un ejemplo:</p>
+            <pre><code id="codeSample"></code></pre>
+          </div>
+        </details>
+      </div>
+    </div>
+  </div>
 
   <script>
-    // ⚠️ Reemplaza por tu URL de Apps Script (la /exec)
+    // Tu URL de Apps Script
     const GAS_URL = "https://script.google.com/macros/s/AKfycbxa-v6VBa1Bay24KPft08B9jbvTSrx_DsNYWVvIuhve3Rr_gmVVcTEs6wdfc2eG1qHI/exec";
 
-    const outGet  = document.getElementById('outGet');
-    const outPost = document.getElementById('outPost');
+    // Botones / enlaces
+    document.getElementById("openNew").href = GAS_URL;
+    document.getElementById("fallbackLink").href = GAS_URL;
 
-    document.getElementById('btnGet').addEventListener('click', async () => {
-      try {
-        // Puedes agregar parámetros: ?action=list&limit=10
-        const url = GAS_URL + "?action=ping&time=" + encodeURIComponent(new Date().toISOString());
-        const res = await fetch(url, { method: 'GET' });
-        if (!res.ok) throw new Error("HTTP " + res.status);
-        const data = await res.json();
-        outGet.textContent = JSON.stringify(data, null, 2);
-      } catch (err) {
-        outGet.textContent = "Error GET: " + err.message;
-      }
-    });
+    // Muestra código de ejemplo (por si se usa como API)
+    const example = `
+/* Ejemplo de consumo como API (GET y POST) */
+(async () => {
+  // GET con parámetros
+  const getRes = await fetch(\`\${GAS_URL}?action=ping\`);
+  const getJson = await getRes.json();
+  console.log("GET", getJson);
 
-    document.getElementById('btnPost').addEventListener('click', async () => {
-      try {
-        const payload = {
-          action: "addContact",
-          contact: { name: "Cliente Demo", email: "demo@example.com" },
-          // apiKey: "tu_token_opcional"
-        };
-        const res = await fetch(GAS_URL, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(payload)
-        });
-        if (!res.ok) throw new Error("HTTP " + res.status);
-        const data = await res.json();
-        outPost.textContent = JSON.stringify(data, null, 2);
-      } catch (err) {
-        outPost.textContent = "Error POST: " + err.message;
+  // POST con JSON
+  const payload = { action: "addContact", contact: { name: "Cliente Demo" } };
+  const postRes = await fetch(GAS_URL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(payload)
+  });
+  const postJson = await postRes.json();
+  console.log("POST", postJson);
+})();`.trim();
+    document.getElementById("codeSample").textContent = example.replaceAll("GAS_URL", JSON.stringify(GAS_URL));
+
+    // Si el iframe falla (por políticas X-Frame-Options), mostramos fallback
+    const frame = document.getElementById("appFrame");
+    const fallback = document.getElementById("fallback");
+
+    // Estrategia: si en 1500ms no recibimos 'load', asumimos bloqueo y mostramos fallback
+    let loaded = false;
+    frame.addEventListener("load", () => { loaded = true; }, { once: true });
+
+    setTimeout(() => {
+      if (!loaded) {
+        frame.setAttribute("hidden", "true");
+        fallback.removeAttribute("hidden");
       }
+    }, 1500);
+
+    // Recargar iframe
+    document.getElementById("reload").addEventListener("click", () => {
+      frame.removeAttribute("hidden");
+      fallback.setAttribute("hidden", "true");
+      frame.src = GAS_URL + (GAS_URL.includes("?") ? "&" : "?") + "t=" + Date.now();
     });
   </script>
 </body>
