--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
   <meta charset="utf-8">
-  <title>Redireccionando…</title>
-  <!-- Redirige inmediatamente -->
+  <title>CRM Zaaz</title>
+
+  <!-- Redirige inmediatamente en la MISMA pestaña -->
   <meta http-equiv="refresh" content="0; url=https://script.google.com/a/macros/mizaaz.pe/s/AKfycbxa-v6VBa1Bay24KPft08B9jbvTSrx_DsNYWVvIuhve3Rr_gmVVcTEs6wdfc2eG1qHI/exec">
 </head>
 <body>
-  <!-- Fallback por si el meta-refresh estuviera bloqueado -->
-  <p>Si no eres redirigido automáticamente, abre este enlace:</p>
-  <p>
-    <a href="https://script.google.com/a/macros/mizaaz.pe/s/AKfycbxa-v6VBa1Bay24KPft08B9jbvTSrx_DsNYWVvIuhve3Rr_gmVVcTEs6wdfc2eG1qHI/exec">
-      https://script.google.com/a/macros/mizaaz.pe/s/AKfycbxa-v6VBa1Bay24KPft08B9jbvTSrx_DsNYWVvIuhve3Rr_gmVVcTEs6wdfc2eG1qHI/exec
-    </a>
-  </p>
 </body>
 </html>
