--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>CRM Zaaz</title>
 
-  <!-- Redirige inmediatamente en la MISMA pestaña -->
+  <!-- Abre la URL en la misma pestaña automáticamente -->
   <meta http-equiv="refresh" content="0; url=https://script.google.com/a/macros/mizaaz.pe/s/AKfycbxa-v6VBa1Bay24KPft08B9jbvTSrx_DsNYWVvIuhve3Rr_gmVVcTEs6wdfc2eG1qHI/exec">
 </head>
 <body>
