--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>CRM Zaaz</title>
-
-  <!-- Abre la URL en la misma pestaña automáticamente -->
-  <meta http-equiv="refresh" content="0; url=https://script.google.com/a/macros/mizaaz.pe/s/AKfycbxa-v6VBa1Bay24KPft08B9jbvTSrx_DsNYWVvIuhve3Rr_gmVVcTEs6wdfc2eG1qHI/exec">
-</head>
-<body>
-</body>
-</html>
+<h1> Hola</h1>
