--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<h1> Hol111</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>CRM Zaaz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { font-family: system-ui, sans-serif; margin: 20px; }
+    pre { background:#f6f8fa; padding:12px; border-radius:8px; }
+    button { padding:.6rem 1rem; }
+  </style>
+</head>
+<body>
+  <h1>Hola</h1>
+  <p>Contenido cargado desde Apps Script (sin cambiar la URL):</p>
+
+  <button id="btn">Cargar datos</button>
+  <pre id="out">—</pre>
+
+  <script>
+    const GAS_URL = "https://script.google.com/macros/s/AKfycbxa-v6VBa1Bay24KPft08B9jbvTSrx_DsNYWVvIuhve3Rr_gmVVcTEs6wdfc2eG1qHI/exec";
+
+    document.getElementById('btn').addEventListener('click', async () => {
+      const out = document.getElementById('out');
+      out.textContent = 'Cargando...';
+      try {
+        const res = await fetch(GAS_URL + "?action=ping");
+        if (!res.ok) throw new Error("HTTP " + res.status);
+        const data = await res.json();
+        out.textContent = JSON.stringify(data, null, 2);
+      } catch (e) {
+        out.textContent = "Error: " + e.message;
+      }
+    });
+  </script>
+</body>
+</html>
