--- a/index.html
+++ b/index.html
@@ -1,37 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>CRM Zaaz</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { font-family: system-ui, sans-serif; margin: 20px; }
-    pre { background:#f6f8fa; padding:12px; border-radius:8px; }
-    button { padding:.6rem 1rem; }
+    html, body { height: 100%; margin: 0; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
+    header { padding: 12px 16px; border-bottom: 1px solid #e5e7eb; font-weight: 600; }
+    .wrap  { height: calc(100% - 50px); }
+    iframe { width: 100%; height: 100%; border: 0; display: block; }
+    #fallback { display:none; height: 100%; place-items: center; text-align: center; padding: 24px; }
+    .btn { display:inline-block; padding:10px 14px; border-radius:8px; border:1px solid #2563eb; color:#2563eb; text-decoration:none; }
+    .muted { color:#6b7280; }
   </style>
 </head>
 <body>
-  <h1>Hola</h1>
-  <p>Contenido cargado desde Apps Script (sin cambiar la URL):</p>
+  <header>Hola</header>
 
-  <button id="btn">Cargar datos</button>
-  <pre id="out">—</pre>
+  <div class="wrap">
+    <!-- IFRAME al estilo Google Sites -->
+    https://script.google.com/macros/s/AKfycbxa-v6VBa1Bay24KPft08B9jbvTSrx_DsNYWVvIuhve3Rr_gmVVcTEs6wdfc2eG1qHI/exec
+      sandbox="
+        allow-forms
+        allow-modals
+        allow-popups
+        allow-popups-to-escape-sandbox
+        allow-presentation
+        allow-same-origin
+        allow-scripts
+      "
+      allow="
+        geolocation *; microphone *; camera *; clipboard-read *; clipboard-write *;
+        display-capture *; fullscreen *; payment *
+      "
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen
+      loading="eager"
+    ></iframe>
+
+    <!-- Fallback si el iframe es bloqueado por X-Frame-Options/CSP -->
+    <div id="fallback">
+      <div>
+        <h3>No se pudo mostrar el App Script dentro de esta página</h3>
+        <p class="muted">
+          Es probable que el servidor del App Script impida la inserción en iframe.
+          Puedes abrir el CRM en esta misma pestaña con este botón:
+        </p>
+        <p><a class="btn" id="openSameTab" href="#">Abrir CRM</a></p>
+      </div>
+    </div>
+  </div>
 
   <script>
     const GAS_URL = "https://script.google.com/macros/s/AKfycbxa-v6VBa1Bay24KPft08B9jbvTSrx_DsNYWVvIuhve3Rr_gmVVcTEs6wdfc2eG1qHI/exec";
+    const frame   = document.getElementById("appFrame");
+    const fallback= document.getElementById("fallback");
+    const openBtn = document.getElementById("openSameTab");
 
-    document.getElementById('btn').addEventListener('click', async () => {
-      const out = document.getElementById('out');
-      out.textContent = 'Cargando...';
-      try {
-        const res = await fetch(GAS_URL + "?action=ping");
-        if (!res.ok) throw new Error("HTTP " + res.status);
-        const data = await res.json();
-        out.textContent = JSON.stringify(data, null, 2);
-      } catch (e) {
-        out.textContent = "Error: " + e.message;
-      }
-    });
+    // Si el iframe no carga en ~1.5s, mostramos fallback
+    let loaded = false;
+    frame.addEventListener("load", () => { loaded = true; }, { once: true });
+    setTimeout(() => { if (!loaded) { frame.style.display="none"; fallback.style.display="grid"; } }, 1500);
+
+    // Botón para abrir en la misma pestaña (si el iframe está bloqueado)
+    openBtn.addEventListener("click", (e) => { e.preventDefault(); window.location.href = GAS_URL; });
   </script>
 </body>
 </html>
